@@ -49,6 +49,7 @@ dist_vendor_DATA = \
 	vendor/f5.bigip.xml \
 	vendor/foundry.xml \
 	vendor/ftos.xml \
+	vendor/jacarta.xml \
 	vendor/junos.xml \
 	vendor/hp.hpux.xml \
 	vendor/liebert.xml \
