@@ -1,3 +1,8 @@
+2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/Jacarta.pm:
+	New discovery module for Jacarta iMeter (thanks to Roman Hochuli)
+
 2010-09-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP.pm (initCollectorGlobals):
